# rl_playground

./: .gitignore  dqn.ipynb  dqn_atari.ipynb  dqn_gridworld.ipynb  jax_rng.ipynb  pyproject.toml
src/: agent.py  config.py  net.py  q_network.py  replay_buffer.py  train.py  utils.py
src/configs/: atari.yaml  gridworld.yaml
src/gymnasium_env/: __init__.py
src/gymnasium_env/envs/: __init__.py  grid_world.py
src/gymnasium_env/wrappers/: __init__.py  onehot_flat_pos_wrapper.py  onehot_grid_pos_wrapper.py  onehot_pos_wrapper.py
